# learn_python_grading_journal

./: .env  Dockerfile  Makefile  README.md  database_structure.drawio  docker-compose.yml  pyproject.toml  requirements.txt
fixtures/: dev.sql
grading_journal/: __main__.py  api_models.py  config.py  create_database.py  database.py  errors.py  main.py  repos.py  routers.py
